syntax = "proto3";

package Homework3;

option go_package = "Homework3/proto";

message ChatMessage {
  string clientName = 1;
  string message = 2;
}

message     ChatBroadcast {
  string serverName = 1;
  int64 nanoSeconds = 2;
}
service TimeAsk {
  rpc AskForTime(AskForTimeMessage) returns (TimeMessage);
}